--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,7 @@
-requests~=2.32.3
+certifi==2024.12.14
+charset-normalizer==3.4.1
+idna==3.10
+requests==2.32.3
+urllib3==2.3.0
+PyExecJS~=1.5.1
+python-dotenv~=1.0.1
